lcs-web (2.4.9~8) Lcs; urgency=low

  [ Jean-Luc Chretien ]
  2.4.9~8
  * Add cat 6 params ENT in  edit_params.php 
  * Fix path in auth_ent.php and logout_ent.php
  * Fix auth choice in barre.php
  * Modify lcs-lenny2squeeze (by Franck Molle)
  * Add chmod 755 on /usr/share/lcs in lcs-web-fixrights
  * Add log_rapprochements.php
  * Modify edit_params.php 
  2.4.9~4
  * Modify lcs/logout.php with logout spip ajax request
  * Add first version of lcs-lenny2squeeze
  * Fix a typo erreor in doc/index.php
  * Fix bug in Annu/add_group_right.php
  * Add and modify scripts for AUTH LCS ENT :
     lcs-web/www/lcs/ajax_ent.php
     lcs-web/www/lcs/barre.php
     lcs-web/www/lcs/auth_ent.php
     lcs-web/www/lcs/logout_ent.php
     lcs-web/www/lcs/ent.js
     lcs-web/www/lcs/includes/config.inc.in
     lcs-web/www/lcs/includes/log2lcsentcas_ajax.php
     lcs-web/www/lcs/includes/functions.inc.php
     lcs-web/www/c/ent.css
  * Modify postinst to update config.in.php

  [ Philippe LECLERC ]    
  * Change the test status of a module in gestpack.sh

  [ Jean-Luc Chretien ]
  * Fix bug in createmaildir.sh and mkhdir.sh
  * Add test on folder Profile in open_session function 
  * Fix bug in setup_keys.php : Replace in js mb_substr by substr
  * Add function isRight in LcSe.pm
  * Fix special char in ldap_cleaner.php, del_group_user.php, add_group.php
  * Replace deprecated $HTTP_POST_FILES by $_FILES 
  * Add adminse3 in searchAndDelete.pl

  [ Franck Molle]
  * Modify assist.sh for LCS and SE3

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 11 May 2012 17:12:42 +0200

lcs-web (2.4.8.2) Lcs; urgency=low

  * Fix bug in createmaildir.sh

 -- Jean-Luc Chrétien <jean-luc.chretien@tice.ac-caen.fr>  Fri, 24 Jun 2011 09:56:48 +0200

lcs-web (2.4.8.1) Lcs; urgency=low

  [ Jean-Luc Chrétien ]
  * Fix charset in Admin/edit_params.php 
  * Fix bug in import comptes on scripts/import_comptes.php
